fix philosophy spacing and line height on company

--- a/css/company.css
+++ b/css/company.css
@@ -36,11 +36,9 @@
     margin-bottom:35px;
     font-size: 2.5em;
     color: #3E2B81;
-    font: bold "Meiryo", sans-serif;
+    font: "Meiryo", sans-serif;
     letter-spacing: 0px;
     font-weight: 700;
-
-    
 }
 
 #mf1 .ttl01 p{
@@ -59,7 +57,7 @@
 #mf1 table tr th,
 #mf1 table tr td{
     padding: 14px 15px;
-    line-height: 3em;
+    line-height: 2.5em;
 }
 #mf1 table tr th{
     width: 220px;
